[Amenities Detail] Fix toggle button size and position on mobile

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -494,7 +494,12 @@ body {
                             }
                             > h3 {
                                 font-size: 24px;
+                                line-height: 1.4em;
                             }
+                        }
+                        &__description_toggler {
+                            height: 24px;
+                            top: 4px;
                         }
                         &__description {
                             .text {
